<resources>
    <string name="app_name">MONJA UP3 BNA</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="save_changes">SAVE CHANGE</string>
    <string name="no_inspeksi">No Inspeksi</string>
    <string name="rayon">Rayon</string>
    <string name="jenis_temuan">Jenis Temuan</string>
    <string name="tingkat_emergency">Tingkat Emergency</string>
    <string name="pemadaman">Pemadaman</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="pt_pln_persero">PT. PLN (Persero)</string>
    <string name="no_induk">NIK</string>
    <string name="nama_petugas">Nama Petugas</string>
    <string name="phone">Phone Number</string>
    <string name="role">Role</string>
    <string name="category">Category</string>
    <string name="nama_category">Title</string>
    <string name="value_category">Value</string>
    <string name="desc_category">Description</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>
    <string name="form_gangguan">Form Gangguan</string>
    <string name="indikasi">Indikasi</string>
    <string name="arus_pasha_r">Arus Pasha R</string>
    <string name="arus_pasha_s">Arus Pasha S</string>
    <string name="arus_pasha_t">Arus Pasha T</string>
    <string name="arus_pasha_n">Arus Pasha N</string>
    <string name="lokasi_gangguan">Lokasi Gangguan</string>
    <string name="form_hasil_gangguan">Form Hasil Ganguan</string>
    <string name="penyebab_ganguan">Penyebab Gangguan</string>
    <string name="foto_gangguan_1">Foto Gangguan 1</string>
    <string name="foto_gangguan_2">Foto Gangguan 2</string>
    <string name="form_hasil_inspeksi">Form Hasil Inspeksi</string>
    <string name="penyulangan">Penyulangan</string>
    <string name="padam">padam</string>
    <string name="tidak_padam">Tidak Padam</string>
    <string name="jenis_wo">Jenis WO</string>
    <string name="lokasitindaklanjut">Lokasi Tindak Lanjut</string>
    <string name="tgltindaklanjut">Tanggal Tindak Lanjut</string>
    <string name="stat_Tl">Status Tindak Lanjut</string>

    <array name="dummy">
        <item name="Select...">Select...</item>
        <item name="Dummy Data 1">Dummy Data 1</item>
        <item name="Dummy Data 2">Dummy Data 2</item>
        <item name="Dummy Data 3">Dummy Data 3</item>
    </array>
</resources>
