<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/Widget.TextView.Title"
                            android:text="@string/category"/>

                        <com.haerul.monja.utils.CustomSpinner
                            android:id="@+id/cat_master_data"
                            style="@style/Widget.Spinner.Primary"/>

                        <TextView
                            android:layout_marginTop="25dp"
                            style="@style/Widget.TextView.Title"
                            android:text="@string/nama_category"/>

                        <EditText
                            android:id="@+id/name_category"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            style="@style/Widget.EditText.Primary"
                            android:inputType="textCapWords" />

                        <TextView
                            android:layout_marginTop="25dp"
                            style="@style/Widget.TextView.Title"
                            android:text="@string/value_category"/>

                        <EditText
                            android:id="@+id/title_category"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            style="@style/Widget.EditText.Primary"
                            android:inputType="textCapWords" />

                        <TextView
                            android:layout_marginTop="25dp"
                            style="@style/Widget.TextView.Title"
                            android:text="@string/desc_category"/>

                        <EditText
                            android:id="@+id/desc_category"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            style="@style/Widget.EditText.Primary"
                            android:inputType="textCapWords" />



                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/actionLayout"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button

                        android:id="@+id/clear"
                        android:layout_weight="1"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="26dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/colorTextGray2"
                        android:text="@string/clear"
                        style="@style/Widget.Button.Secondary"/>

                    <Button
                        android:id="@+id/submit_master"
                        android:layout_weight="1"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="26dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/submit"
                        style="@style/Widget.Button.Success"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>