<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                        android:layout_marginTop="25dp"
                        style="@style/Widget.TextView.Title"
                        android:text="@string/no_induk"/>

                        <EditText
                        android:id="@+id/no_karyawan"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        style="@style/Widget.EditText.Primary"
                        android:inputType="textCapWords" />

                        <TextView
                            android:layout_marginTop="25dp"
                            style="@style/Widget.TextView.Title"
                            android:text="@string/nama_petugas"/>

                        <EditText
                            android:id="@+id/nama_petugas"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            style="@style/Widget.EditText.Primary"
                            android:inputType="textCapWords" />

                        <TextView
                            android:layout_marginTop="25dp"
                            style="@style/Widget.TextView.Title"
                            android:text="@string/phone"/>

                        <EditText
                            android:id="@+id/phone"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            style="@style/Widget.EditText.Primary"
                            android:inputType="textCapWords" />

                        <TextView
                            android:layout_marginTop="25dp"
                            style="@style/Widget.TextView.Title"
                            android:text="@string/email"/>

                        <EditText
                            android:id="@+id/email_addres"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            style="@style/Widget.EditText.Primary"
                            android:inputType="textCapWords" />

                        <TextView
                            style="@style/Widget.TextView.Title"
                            android:text="@string/role"/>

                        <com.haerul.monja.utils.CustomSpinner
                            android:id="@+id/rayon"
                            style="@style/Widget.Spinner.Primary"/>

                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/actionLayout"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button

                        android:id="@+id/cancel"
                        android:layout_weight="1"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="26dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/colorTextGray2"
                        android:text="Cancel"
                        style="@style/Widget.Button.Secondary"/>
                    <Button
                        android:id="@+id/save"
                        android:layout_weight="1"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="26dp"
                        android:layout_marginRight="16dp"
                        android:text="Save"
                        style="@style/Widget.Button.Success"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>