<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_marginTop="25dp"
                            style="@style/Widget.TextView.Title"
                            android:text="@string/no_inspeksi"/>

                        <EditText
                            android:id="@+id/no_inspeksi"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            style="@style/Widget.EditText.Primary"
                            android:inputType="textCapWords" />

                        <TextView
                            style="@style/Widget.TextView.Title"
                            android:text="@string/rayon"/>

                        <com.haerul.monja.utils.CustomSpinner
                            android:id="@+id/rayon"
                            style="@style/Widget.Spinner.Primary"/>

                        <TextView
                            style="@style/Widget.TextView.Title"
                            android:text="@string/jenis_temuan"/>

                        <com.haerul.monja.utils.CustomSpinner
                            android:id="@+id/jenis_temuan"
                            style="@style/Widget.Spinner.Primary"/>

                        <TextView
                            android:layout_marginTop="25dp"
                            style="@style/Widget.TextView.Title"
                            android:text="@string/tingkat_emergency"/>

                        <com.haerul.monja.utils.CustomRadioGroup
                            android:id="@+id/tingkat_emergency"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:orientation="horizontal"/>

                        <TextView
                            android:layout_marginTop="25dp"
                            style="@style/Widget.TextView.Title"
                            android:text="@string/pemadaman"/>

                        <com.haerul.monja.utils.CustomRadioGroup
                            android:id="@+id/pemadaman"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:orientation="horizontal"/>

                        <TextView
                            android:layout_marginTop="25dp"
                            style="@style/Widget.TextView.Title"
                            android:text="Lokasi Inspeksi"/>
                        
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/lokasi_inspeksi"
                                android:layout_marginLeft="16dp"
                                style="@style/Widget.EditText.Primary"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:focusable="true"
                                android:foreground="?attr/selectableItemBackground"
                                tools:ignore="UnusedAttribute" />

                            <ImageView
                                android:id="@+id/set_lokasi"
                                android:src="@drawable/ic_location"
                                android:paddingStart="@dimen/_10dp"
                                android:paddingLeft="@dimen/_10dp"
                                android:paddingTop="@dimen/_5dp"
                                android:paddingBottom="@dimen/_10dp"
                                android:layout_marginTop="8dp"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginRight="16dp"
                                android:clickable="true"
                                android:focusable="true"
                                android:background="?attr/selectableItemBackgroundBorderless"/>
                        </LinearLayout>

                        <TextView
                            style="@style/Widget.TextView.Title"
                            android:text="Tanggal Inspeksi"/>

                        <TextView
                            bind:inputDate="@{`date`}"
                            android:id="@+id/tanggalInspeksi"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            style="@style/Widget.Date.Primary"/>

                        <TextView
                            style="@style/Widget.TextView.Title"
                            android:text="Foto Inspeksi"/>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/photoText"
                                android:layout_marginLeft="16dp"
                                style="@style/Widget.EditText.Primary"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:focusable="true"
                                android:foreground="?attr/selectableItemBackground"
                                tools:ignore="UnusedAttribute" />
                            <ImageView
                                android:id="@+id/photo"
                                android:src="@drawable/ic_add_photo"
                                android:paddingStart="@dimen/_10dp"
                                android:paddingLeft="@dimen/_10dp"
                                android:paddingTop="@dimen/_5dp"
                                android:paddingBottom="@dimen/_10dp"
                                android:layout_marginTop="8dp"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginRight="16dp"
                                android:clickable="true"
                                android:focusable="true"
                                android:background="?attr/selectableItemBackgroundBorderless"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginBottom="20dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:id="@+id/photoPreview"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="250dp"
                                android:layout_marginLeft="16dp"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/btn_secondary"
                                android:paddingLeft="16dp"
                                android:paddingRight="16dp"
                                android:paddingTop="10dp"
                                android:paddingBottom="10dp"
                                android:scaleType="fitCenter"
                                android:src="@drawable/ic_photo_add_large" />
                            <ImageView
                                android:paddingStart="@dimen/_10dp"
                                android:paddingLeft="@dimen/_10dp"
                                android:paddingTop="@dimen/_5dp"
                                android:paddingBottom="@dimen/_10dp"
                                android:layout_marginTop="8dp"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginRight="16dp"
                                android:clickable="true"
                                android:focusable="true"
                                android:background="?attr/selectableItemBackgroundBorderless"/>
                        </LinearLayout>
                        
                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/actionLayout"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        
                        android:id="@+id/cancel"
                        android:layout_weight="1"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="26dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/colorTextGray2"
                        android:text="Cancel"
                        style="@style/Widget.Button.Secondary"/>
                    <Button
                        android:id="@+id/save"
                        android:layout_weight="1"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="26dp"
                        android:layout_marginRight="16dp"
                        android:text="Save"
                        style="@style/Widget.Button.Success"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>